Add step result component

--- a/src/app/components/facerecognition-app/app.component.html
+++ b/src/app/components/facerecognition-app/app.component.html
@@ -8,8 +8,9 @@
   </mat-step>
   <mat-step label="Step 1">
     <ng-template matStepLabel>Check the results</ng-template>
+    <app-result-step></app-result-step>
     <div>
-      <button mat-button matStepperPrevious>Back</button>
+      <button mat-flat-button color="primary" matStepperPrevious>Back</button>
     </div>
   </mat-step>
 </mat-horizontal-stepper>
