--- a/src/app/components/upload-step/upload-step.component.html
+++ b/src/app/components/upload-step/upload-step.component.html
@@ -27,3 +27,6 @@
     </button>
   </mat-card-content>
 </mat-card>
+<div>
+  <button mat-flat-button color="primary" (click)="nextButtonHandler()">Next</button>
+</div>
