--- a/src/app/components/result-step/result-step.component.html
+++ b/src/app/components/result-step/result-step.component.html
@@ -3,11 +3,20 @@
     <mat-card-title>Faces found</mat-card-title>
     <mat-card-subtitle>Is that correct?</mat-card-subtitle>
   </mat-card-header>
-  <img mat-card-image src="/assets/kawaiilemon.jpg" alt="Your photo">
+  <img mat-card-image [src]="current.url" alt="Your photo">
   <mat-divider inset="inset"></mat-divider>
   <mat-card-content>
-    <table>
-
-    </table>
+    <mat-table mat-table [dataSource]="mappedProperties">
+      <ng-container matColumnDef="property">
+        <th mat-header-cell *matHeaderCellDef> Property </th>
+        <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+      </ng-container>
+      <ng-container matColumnDef="value">
+        <th mat-header-cell *matHeaderCellDef> Value </th>
+        <td mat-cell *matCellDef="let element"> {{element.value}} </td>
+      </ng-container>
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </mat-table>
   </mat-card-content>
 </mat-card>
