--- a/src/app/components/upload-step/upload-step.component.html
+++ b/src/app/components/upload-step/upload-step.component.html
@@ -28,5 +28,5 @@
   </mat-card-content>
 </mat-card>
 <div>
-  <button mat-flat-button color="primary" (click)="nextButtonHandler()">Next</button>
+  <button mat-flat-button color="primary" (click)="nextButtonHandler()" [disabled]="waitingForResult">Next</button>
 </div>
