--- a/src/app/components/result-step/result-step.component.html
+++ b/src/app/components/result-step/result-step.component.html
@@ -1,4 +1,4 @@
-<mat-card class="example-card">
+<mat-card class="result-card">
   <mat-card-header>
     <mat-card-title>Faces found</mat-card-title>
     <mat-card-subtitle>Is that correct?</mat-card-subtitle>
@@ -6,7 +6,7 @@
   <img mat-card-image [src]="current.url" alt="Your photo">
   <mat-divider inset="inset"></mat-divider>
   <mat-card-content>
-    <mat-table mat-table [dataSource]="mappedProperties">
+    <table mat-table [dataSource]="mappedProperties" class="mat-elevation-z1">
       <ng-container matColumnDef="property">
         <th mat-header-cell *matHeaderCellDef> Property </th>
         <td mat-cell *matCellDef="let element"> {{element.name}} </td>
@@ -17,6 +17,6 @@
       </ng-container>
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-    </mat-table>
+    </table>
   </mat-card-content>
 </mat-card>
