--- a/src/app/components/result-step/result-step.component.html
+++ b/src/app/components/result-step/result-step.component.html
@@ -3,7 +3,9 @@
     <mat-card-title>Faces found</mat-card-title>
     <mat-card-subtitle>Is that correct?</mat-card-subtitle>
   </mat-card-header>
-  <img mat-card-image [src]="current.url" alt="Your photo">
+  <canvas #canvas mat-card-image>
+
+  </canvas>
   <mat-divider inset="inset"></mat-divider>
   <mat-card-content>
     <table mat-table [dataSource]="mappedProperties" class="mat-elevation-z1">
