Add switching between active faces

--- a/src/app/components/result-step/result-step.component.css
+++ b/src/app/components/result-step/result-step.component.css
@@ -11,3 +11,9 @@ table {
   margin-top: 1rem;
   margin-bottom: 1rem;
 }
+
+.pager {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
