--- a/src/app/components/facerecognition-app/app.component.html
+++ b/src/app/components/facerecognition-app/app.component.html
@@ -1,13 +1,5 @@
-<mat-horizontal-stepper linear #stepper>
-  <mat-step label="Step 1">
-    <ng-template matStepLabel>Upload a picture</ng-template>
-    <app-upload-step [stepper]="stepper"></app-upload-step>
-  </mat-step>
-  <mat-step label="Step 1">
-    <ng-template matStepLabel>Check the results</ng-template>
-    <app-result-step [active]="stepper.selectedIndex == 1"></app-result-step>
-    <div>
-      <button mat-flat-button color="primary" matStepperPrevious>Back</button>
-    </div>
-  </mat-step>
-</mat-horizontal-stepper>
+<mat-toolbar color="primary" class="mat-elevation-z6">
+    <a routerLink="/new" routerLinkActive="active">New</a>
+    <a routerLink="/view" routerLinkActive="active">View</a>
+</mat-toolbar>
+<router-outlet></router-outlet>
