--- a/src/app/components/facerecognition-app/app.component.css
+++ b/src/app/components/facerecognition-app/app.component.css
@@ -1,3 +1,6 @@
-mat-toolbar {
-  justify-content: space-evenly;
+.links {
+  margin-left: 2em;
+  width: 100%;
+  display: flex;
+  justify-content: flex-start;
 }
