--- a/src/app/components/result-step/result-step.component.css
+++ b/src/app/components/result-step/result-step.component.css
@@ -1,6 +1,9 @@
 .result-card {
   max-width: 400px;
+  min-width: 400px;
+  margin-top: 2rem;
   margin-bottom: 1rem;
+  margin-left: 2rem;
 }
 
 table {
@@ -16,4 +19,10 @@ table {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
+}
+
+.card-placer {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
 }
