--- a/src/app/components/view-page/view-page.component.html
+++ b/src/app/components/view-page/view-page.component.html
@@ -26,18 +26,7 @@
         <button mat-button color="primary" (click)="faceChanged(-1)">Prev face</button>
         <button mat-button color="primary" (click)="faceChanged(1)">Next face</button>
       </div>
-      <table mat-table [dataSource]="mappedProperties" class="mat-elevation-z1">
-        <ng-container matColumnDef="property">
-          <th mat-header-cell *matHeaderCellDef> Property </th>
-          <td mat-cell *matCellDef="let element"> {{element.name}} </td>
-        </ng-container>
-        <ng-container matColumnDef="value">
-          <th mat-header-cell *matHeaderCellDef> Value </th>
-          <td mat-cell *matCellDef="let element"> {{element.value}} </td>
-        </ng-container>
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-      </table>
+      <app-face-attributes [current]="images[currentPictureIndex]" [currentFaceIndex]="currentFaceIndex"></app-face-attributes>
     </mat-card-content>
   </mat-card>
 </div>
