--- a/src/app/components/view-page/view-page.component.html
+++ b/src/app/components/view-page/view-page.component.html
@@ -20,7 +20,7 @@
       <mat-card-subtitle>Are they correct?</mat-card-subtitle>
     </mat-card-header>
     <mat-card-content>
-      <div class="pager" *ngIf="images && images[currentPictureIndex].faces.length > 0">
+      <div class="pager" *ngIf="images.length > 0 && images[currentPictureIndex].faces.length > 0">
         <button mat-button color="primary" (click)="faceChanged(-1)">Prev face</button>
         <button mat-button color="primary" (click)="faceChanged(1)">Next face</button>
       </div>
