Add error handling from face api response

--- a/src/app/components/upload-step/upload-step.component.css
+++ b/src/app/components/upload-step/upload-step.component.css
@@ -26,3 +26,11 @@
   margin-bottom: 1rem;
 }
 
+.error-layout {
+  display: flex;
+  justify-content: space-between;
+}
+
+.error-layout mat-icon {
+  cursor: pointer;
+}
